tests/NormalTests/paczka2/big_fuzzy/97002416.err
Error in line 4: yPQN A190 68,8
Error in line 7: d8jVLo A190 83,4
Error in line 26: yPQN A669 66,4
Error in line 27: uCNjfKm4ubN A256 92,7
Error in line 29: 7wr6QC A190 84,0
Error in line 35: yPQN A1/7 95,6
Error in line 23: u6OvKTGm3 A107 157,9
Error in line 42: uCNjfKm4ubN A190 19,7
Error in line 30: yPQN A107 70,8
Error in line 37: u6OvKTGm3 A669 60,1
Error in line 62: uCNjfKm4ubN A190 89,0
Error in line 58: A256 A190 96,7
Error in line 71: uCNjfKm4ubN A107 10,45
Error in line 67: d8jVLo A256 0,0
Error in line 75: yPQN A190 54,2
Error in line 78: u6OvKTGm3 A190 72,3
Error in line 76: uCNjfKm4ubN A107 27,3
Error in line 70: SlzJ3UGTBy A256 100,3
Error in line 81: d8jVLo A256 88,8
Error in line 94: yPQN A107 96,4
Error in line 100: d8jVLo A107 85,90
Error in line 102: uCNjfKm4ubN A190 82,0
Error in line 109: uCNjfKm4ubN A107 -1,8
Error in line 108: u6OvKTGm3 A107 72,7
Error in line 106: uCNjfKm4ubN A107 4,8
Error in line 115: uCNjfKm4ubN A190 78,5
Error in line 126: SlzJ3UGTBy A669 9,2
Error in line 145: 7wr6QC A190 11,0
Error in line 152: 7wr6QC A669 76,5
Error in line 148: d8jVLo A669 306,1
Error in line 162: d8jVLo A256 86,6
Error in line 161: A256 A107 73,4
Error in line 174: A256 A190 64,7
Error in line 173: uCNjfKm4ubN A107 87,1
Error in line 181: yPQN At07 5t,t
Error in line 183: u6OvKTGm3 A669 41,6
Error in line 143: yPQN A669 14,7
Error in line 196: yPQN A107 2,9
Error in line 217: d8jVLo A256 55,8
Error in line 216: 7wr6QC A190 83,7
Error in line 212: u6OvKTGm3 A256 84,5
Error in line 228: yPQN A107 314,1
Error in line 235: yPQN A107 89,9
Error in line 238: uCNjf
Error in line 246: A256 A107 52,3
Error in line 226: d8jVLo A190 96,7
Error in line 247: A256 A256 29,7
